<resources>

  <string name="open">open</string>
  <string name="close">close</string>

  <string name="app_name">DinoDemo</string>
  <string name="action_settings">Settings</string>
  <string name="name">Name：</string>
  <string name="test">Captchas：</string>
  <string name="getNumber">Get Captchas</string>
  <string name="password">Password：</string>
  <string name="register">Register</string>
  <string name="login">Login</string>
  <string name="into">Enter</string>

  <string name="headsup_content">Content</string>
  <string name="headsup_title">Title</string>
  <string name="item_text1">Map</string>
  <string name="item_text2">Clock</string>
  <string name="item_text3">Date</string>
  <string name="item_text4">FastScroller</string>
  <string name="item_text5">Null</string>
  <string name="item_text6">Null</string>

  <string name="normal">Normal</string>
  <string name="satellite">Satellite</string>
  <string name="night">Night</string>
  <string name="search">Search</string>

  <string name="toStart">Start：</string>
  <string name="toEnd">End：</string>

  <string name="inputStart">Input Start</string>
  <string name="inputEnd">Input End</string>
  <string name="setStart">Set Start</string>
  <string name="setEnd">Set End</string>

  <string name="walk">Walk</string>
  <string name="drive">Drive</string>
  <string name="bus">Bus</string>

  <string name="add_alarm">Add alarm</string>
  <string name="play_sound">Play Sound And Press The Return Key To Exit</string>
  <string name="start">Start</string>
  <string name="pause">Pause</string>
  <string name="resume">Resume</string>
  <string name="reset">Reset</string>
  <string name="lap">Lap</string>




</resources>
