<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="18sp"
        />
    <EditText
        android:id="@+id/setStart"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/inputStart"
        android:gravity="center_horizontal"
        android:textColor="@color/location"
        />
      <Button
          android:id="@+id/addStartPlaceBtn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/setStart"
          android:layout_marginLeft="30dp"
          />
  </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textSize="18sp"
            />
        <EditText
            android:id="@+id/setEnd"
            android:hint="@string/inputEnd"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/location"
            android:layout_marginLeft="8dp"
            />
        <Button
            android:id="@+id/addEndPlaceBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setEnd"
            android:layout_marginLeft="30dp"
            />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
    <RadioGroup
        android:id="@+id/search_type_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/bus_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bus" />

        <RadioButton
            android:id="@+id/car_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drive" />

        <RadioButton
            android:id="@+id/walk_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walk" />

    </RadioGroup>
    <Button
        android:id="@+id/goQuery"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:text="GO!"
        />
    </RelativeLayout>
</LinearLayout>