<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/down">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/item_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/grid_item_bg"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/item_text1"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/grid_item_bg"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/item_text2"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/grid_item_bg"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:layout_width="58dp"
                android:layout_height="58dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/item_text3"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>